--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <nav>
             <a href="#" class="menu">Home</a>
             <a href="#" class="menu">Notícias</a>
-            <a href="#" class="menu">Curiosidades</a>
-            <a href="#" class="menu">Fale Conosoco</a>
+            <a href="#" class="menu">Contato</a>
         </nav>
     </header>
 
